# langgraph-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: evolution-api-expert.md  langgraph-expert.md  python-architect-expert.md  python-expert.md  rag-expert.md
.github/workflows/: ci.yml
docs/: chatwoot-setup.md  improvements-roadmap.md
postman/: Temporalis_AI.postman_collection.json
scripts/: ingest.py  supabase_checkpointer.sql  supabase_search_log.sql  supabase_setup.sql
src/: main.py  state.py
src/config/: settings.py
src/graph/: builder.py  classify.py  edges.py  handoff.py  llm.py  nodes.py  prompt.py  respond.py  send.py  sentiment.py
src/integrations/: chatwoot.py  evolution.py  vision.py  whisper.py
src/memory/: checkpointer.py
src/rag/: indexer.py  loaders.py  retriever.py  (+1 more)
tests/: test_analytics.py  test_api_webhook.py  test_catalog_reindex.py  test_chatwoot_integration.py  test_chatwoot_webhook.py  test_evolution_async.py  test_follow_up_scheduler.py  test_follow_up_state.py  test_health.py  test_human_handoff_loop.py  test_instagram_chatwoot.py  test_integrations_evolution.py  test_integrations_whisper.py  test_integrations_zapi.py  test_main_chat.py  test_message_buffer.py  test_new_edges.py  test_new_graph.py  test_new_nodes.py  test_new_state.py  test_rag_indexer.py  test_rag_integration.py  test_rag_loaders.py  test_rag_retriever.py  test_rag_splitters.py  test_rate_limit.py  test_sentiment.py  test_session_timeout.py  test_tools.py  test_vision.py
(+7 files in other folders)
