[project]
name = "temporalis-chatbot"
version = "0.16.0"
description = "ChatBot Temporalis AI — WhatsApp via Evolution API + LangGraph + Supabase pgvector"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "supabase>=2.0",
    "pypdf>=5.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
